# finpipe

./: .env.example  README.md  pyproject.toml
security_master/: ingestion.py
security_master/config/: config.yaml  loader.py
timeseries/: ingestion.py
